# ULUDAG-ENERJI-DAGITILAN

./: .cache.sqlite  DataPrePare.py  Dockerfile  README.md  app.py  consumption.xlsx  consumption2.xlsx  consumption3.xlsx  main.py  predict_pipeline.py  pyproject.toml
.platform/nginx/conf.d/: proxy.conf
data/2025_06_29/Forecast_Data/: Forecast_Data_2025_06_29 19_41_26.parquet
data/forecast_data/: 04_07_2025_01_22_forecast_data.parquet
data/processed/: Forecast_Data.parquet
data/processed/2025_06_29/: Forecast_DataForecast_Data_2025_06_29 15_32_36.parquet
data/raw/: 2020_2025_pk.parquet  Dagitilan_Enerji.xlsx  Forecast_Data.parquet  config.json  train_config.json
input/: consumption - Kopya (2).xlsx  consumption - Kopya.xlsx
input/raw/: consumption_2025_06_29_19_41_24.xlsx
models/: exp_model.cbm
notebooks/: EDA.ipynb  model_train.ipynb
output/: 04_07_2025_01_22_output.xlsx
output/2025_06_29/: Forecast_Results_2025_06_29 14_55_09.xlsx  Forecast_Results_2025_06_29 15_01_54.xlsx  Forecast_Results_2025_06_29 15_13_19.xlsx  Forecast_Results_2025_06_29 15_32_35.xlsx  Forecast_Results_2025_06_29_19_41_24.xlsx
result/: Forecast_Results.xlsx
result/2025-06-29/: Forecast_Results_2025-06-29 02_20_16.xlsx  Forecast_Results_2025-06-29 03_03_32.xlsx
send/: 04_07_2025_01_22_send_to_client.eml
src/: DataPrePare.py  calendar_data.py  config_loader.py  consumption_data.py  data_loader.py  data_prepare.py  epias_data.py  forecast_weather_data.py  historical_weather_data.py  prepare_functions.py  solar_data.py
templates/: dashboard asıl.html  dashboard asıl2.html  dashboard asıl3.html  dashboard claude.html  dashboard.html  result.html  upload.html
utils/: config.json  data_prepare_config.py  data_prepare_functions.py  model_train_functions.py
(+1 files in other folders)
